Fixed display previous&current spacing

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h1 {
     font-family: 'Yomogi', cursive;
     color: white;
     font-size: 2.5em;
-    margin-bottom: 10px;
+
     margin-right:10px;
     
 }
@@ -83,8 +83,6 @@ h1 {
     color: white;
     font-size: .9em;
     margin-right: 10px;
-   /* Have a margin bottom?*/
-   margin-bottom: .2em;
 }
 button {
     font-family: 'Yomogi', cursive;
